@@ -6,14 +6,14 @@ import com.mongodb.DB;
 import com.mongodb.MongoClient;
 import com.mongodb.MongoException;
 
-class MongoDB {
+abstract class MongoDB {
 	
-	static MongoClient mongo;
+	private static MongoClient mongo;
 
     static {
         try {
             String port = System.getProperty("db-port", "27017");
-            mongo = new MongoClient("127.0.0.1", (new Integer(port)).intValue());
+            mongo = new MongoClient("127.0.0.1", Integer.valueOf(port).intValue());
         } catch (UnknownHostException e) {
             throw new RuntimeException(e);
         } catch (MongoException e) {
